Fri Jul  5 00:36:47 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	unittests/reloc:
	* Makefile.in: Use binutils objdump to disassemble and show relocations
	inplace.  Redirect stderr to temporary output files.
	* ref/*_elf.txt: Update.

Sun Jun 30 14:12:12 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* m_cpu.c: Uppercase words unpredictable and deprecated.
	* m_cpumem.c: Likewise.
	* symbol.h: Update comments.
	* area.h (Area_GetBaseReg): Add assert.
	* m_cpuctrl.c: Fix compiler warning.
	* m_coprocessor.c: Cleaned up implementation.  Add support for MCRR2
	and MRRC2.  Add hash character support in front of opcode.

	unittests/compare/core:
	* instr_mcrr_mrrc.s: Add full ARM/Thumb + condition code tests.
	* instr_cdp_mcr_mrc_ldc_stc.s: Add hash character opcode test.

Sun Jun 30 13:58:28 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	unittests/reloc:
	* src/export_label.s: Add test case.
	* ref/export_label_aof.txt, ref/export_label_elf.txt: Update.
	* src/import_qualifiers.s: Fixed typo but also noted that this reveals
	a bug.

Sat Jun 29 22:47:40 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	m4:
	* ltdl.m4: Removed.
	* argz.m4: Removed.
	* libtool.m4: Updated from upstream.

	* configure.ac (AC_CONFIG_MACRO_DIR): Add.

Wed Jun 26 01:48:59 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* src/m_cpuctrl.c (m_cbnz_cbz): Add ELF reloc support.
	* unittests/compare/core/instr_cbz_cbnz.s: Enhance test.

Mon Jun 24 00:14:53 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* put.c (Put_GetHalfWord): Add.
	* put.h (Put_GetHalfWord): Likewise.
	* it.c (IT_ApplyCond): Add enforceLast parameter.
	(IT_CanExtendBlock): Add.
	* it.h: Likewise.
	* m_cpuctrl.c (branch_shared): Refactor into...
	(GetBranchLabel): ...this.
	(BranchLabel_t): Add.
	(m_branch): Make use of GetBranchLabel.  Add Thumb support.
	(m_blx): Likewise.
	(m_bx): Likewise.
	(m_bjx): Likewise.
	(m_cbnz_cbz): Add.
	Follow IT_ApplyCond API change.
	* m_cpuctrl.h (m_cbnz_cbz): Add.