@@ -32,7 +32,7 @@ Section Headers:
   [ 8] Code06_READWRITE  PROGBITS        00000000 000228 000000 00 WAX  0   0  4
   [ 9] Code07_COMDEF     PROGBITS        00000000 000228 000000 00 WAXE  0   0  4
   [10] Code08_COMMON     PROGBITS        00000000 000228 000000 00 WAX  0   0  4
-  [11] Code09_NOINIT     NOBITS          00000000 000000 000000 00 WAX  0   0  0
+  [11] Code09_NOINIT     NOBITS          00000000 000228 000000 00 WAX  0   0  4
   [12] Code10_ALIGN5     PROGBITS        00000000 000240 000000 00 WAX  0   0 32
   [13] Code11_VFP        PROGBITS        00000000 000228 000000 00 WAX  0   0  4
   [14] Code12_REENTRANT  PROGBITS        00000000 000228 000000 00 WAX  0   0  4
@@ -49,7 +49,7 @@ Section Headers:
   [25] Data07_READWRITE  PROGBITS        00000000 000228 000000 00  WA  0   0  4
   [26] Data08_COMDEF     PROGBITS        00000000 000228 000000 00 WAE  0   0  4
   [27] Data09_COMMON     PROGBITS        00000000 000228 000000 00  WA  0   0  4
-  [28] Data10_NOINIT     NOBITS          00000000 000000 000000 00  WA  0   0  0
+  [28] Data10_NOINIT     NOBITS          00000000 000228 000000 00  WA  0   0  4
   [29] Data11_ALIGN7     PROGBITS        00000000 000280 000000 00  WA  0   0 128
   [30] Data12_VFP        PROGBITS        00000000 000228 000000 00  WA  0   0  4
   [31] Data13_DEBUG      PROGBITS        00000000 000228 000000 00  WA  0   0  4
